# Wordle

./: CMakeLists.txt
src/: main.cpp
